[package]
name = "lolcap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arrow = "54.0.0"
once_cell = "1.20.2"
parquet = "54.0.0"
regex = "1.11.1"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
windows-capture = "1.4.2"
